<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailMovie">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="192dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_marginTop="42dp"
        android:id="@+id/img_besar"
        android:layout_weight="0.08"
        android:contentDescription="@string/todo" />

    <TextView
        android:text="@string/judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_title"
        android:layout_weight="0.08" />

    <TextView
        android:text="@string/tanggal_rilis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_release"
        android:layout_weight="0.08" />

    <TextView
        android:text="@string/rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_vote"
        android:layout_weight="0.08" />

    <TextView
        android:text="@string/sinopsis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_sinopsis"
        android:layout_weight="0.32" />

</LinearLayout>
